# tfcpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tensorflow_v2_cpp.cbp  test_cuda_h  tfcuda_test
models/resistor/: saved_model.pb
models/resistor/variables/: variables.data-00000-of-00001  variables.index
scripts/: RunTFvsCublasTest.py
src/dockerfiles/: DockerfileTFCPP  DockerfileTFCPPSmall
src/dsmodels/: DeepSimModelHolder.cpp  createModel.py  powerModel.cpp
src/dsmodels/test/: test_dsmodelsholders.cpp  test_tfmodelholders.cpp
src/loadmodels/: loadmodels.cpp  loadmodels.h  loadmodels_good.cpp  loadmodels_incuda.cpp  loadmodels_speed.cpp  runtfincuda.cu
src/pythonTF/: CreateData.py  CreateModel.py  CreateTFMatModel.py  RunModelCreation.py
src/pythonTF/resistor/: keras_metadata.pb  saved_model.pb
src/pythonTF/resistor/variables/: variables.data-00000-of-00001  variables.index
src/test/: c_python.c  c_python_lib.c  cpp_python.cpp  cpp_python.py  nearestNinterp.c  octree.cpp  octree.h  resample.cpp  test.cpp
src/tfcuda/: multigpu.cpp  multiply.cu  multiply.h  multiplytest.cpp  test_copy.cpp  test_copy_old.cpp  test_cuda_h.cpp  test_cuda_h.cu  test_matrix.cpp  test_matrix_hold.cpp  test_tcores.cpp  test_tfdelete.cpp  test_tfvscublas.cpp  testmat.cu  tfcuda_test_matrix.cpp  tfcuda_test_matrix_reverse.cpp  tfcuda_test_matrix_testing.cpp  tfcuda_test_own.cpp  tfcuda_test_own_cpustage.cpp  tfcuda_test_reverse.cpp  tftest.cpp  threads.cpp
